fix: click indication, z-index, caption hidden, no navbar on mobile

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -10074,6 +10074,7 @@ body {
     bottom: 0;
     right: 0;
     margin: 0px 15px 15px 15px;
+    z-index: 999999;
 }
 
 .bottom_left {
@@ -10084,3 +10085,5 @@ body {
     left: 0;
     margin: 0px 15px 15px 15px;
 }
+
+.image-tool__caption { display: none; }
